--- a/.env.example
+++ b/.env.example
@@ -15,11 +15,95 @@ EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
 EMAIL_USE_TLS=True
 EMAIL_HOST_USER=your-email@gmail.com
-EMAIL_HOST_PASSWORD=your-app-specific-password
+EMAIL_HOST_PASSWORD=your-email-password
+DEFAULT_FROM_EMAIL=HR Department <hr@yourcompany.com>
 
-# Redis Settings
-REDIS_URL=redis://localhost:6379/0
+# HR Department Email
+HR_EMAIL=hr@yourcompany.com
+
+# Cache Settings
+CACHE_BACKEND=django.core.cache.backends.redis.RedisCache
+CACHE_LOCATION=redis://127.0.0.1:6379/1
+CACHE_KEY_PREFIX=hrms_
 
 # Celery Settings
-CELERY_BROKER_URL=redis://localhost:6379/1
-CELERY_RESULT_BACKEND=redis://localhost:6379/2
+CELERY_BROKER_URL=redis://localhost:6379/0
+CELERY_RESULT_BACKEND=redis://localhost:6379/0
+
+# Shift Management Settings
+DEFAULT_GRACE_PERIOD=15
+MAX_BREAK_DURATION=180
+MIN_SHIFT_DURATION=240
+AUTO_ADJUST_RAMADAN=True
+
+# Ramadan Settings
+RAMADAN_HOURS_REDUCTION=2
+RAMADAN_CACHE_TIMEOUT=86400
+RAMADAN_NOTIFICATION_DAYS=7
+
+# Cleanup Settings
+CLEANUP_RETENTION_DAYS=90
+CLEANUP_ARCHIVE_PATH=/path/to/archive/directory
+
+# Time Zone Settings
+TIME_ZONE=Asia/Riyadh
+USE_TZ=True
+
+# Logging Settings
+LOG_LEVEL=INFO
+LOG_FILE=/path/to/logs/hrms.log
+
+# File Upload Settings
+MEDIA_ROOT=/path/to/media
+STATIC_ROOT=/path/to/static
+MAX_UPLOAD_SIZE=5242880  # 5MB in bytes
+
+# Security Settings
+SECURE_SSL_REDIRECT=False
+SESSION_COOKIE_SECURE=False
+CSRF_COOKIE_SECURE=False
+SECURE_BROWSER_XSS_FILTER=True
+SECURE_CONTENT_TYPE_NOSNIFF=True
+
+# API Settings
+API_VERSION=v1
+API_PAGE_SIZE=10
+API_MAX_PAGE_SIZE=100
+
+# Authentication Settings
+AUTH_USER_MODEL=auth.User
+LOGIN_URL=/login/
+LOGIN_REDIRECT_URL=/
+LOGOUT_REDIRECT_URL=/login/
+
+# Feature Flags
+ENABLE_SHIFT_MANAGEMENT=True
+ENABLE_RAMADAN_ADJUSTMENTS=True
+ENABLE_ATTENDANCE_REPORTS=True
+ENABLE_EMAIL_NOTIFICATIONS=True
+ENABLE_CACHE=True
+
+# Development Settings
+DEVELOPMENT_TEAM_EMAIL=dev@yourcompany.com
+SEND_ERRORS_TO_ADMIN=True
+ADMIN_EMAIL=admin@yourcompany.com
+
+# Report Generation Settings
+REPORT_EXPORT_FORMATS=csv,xlsx,pdf
+REPORT_DEFAULT_FORMAT=xlsx
+REPORT_PAGE_SIZE=50
+
+# Notification Settings
+NOTIFICATION_EMAIL_BATCH_SIZE=50
+NOTIFICATION_DELAY_MINUTES=15
+ENABLE_PUSH_NOTIFICATIONS=False
+
+# Maintenance Window
+MAINTENANCE_MODE=False
+MAINTENANCE_START=01:00
+MAINTENANCE_END=03:00
+
+# Custom Company Settings
+COMPANY_NAME=Your Company Name
+COMPANY_ADDRESS=Your Company Address
+COMPANY_PHONE=+1234567890
